test/tests/bad/conflicting-pat-var-defs.carth
;; ConflictingPatVarDefs

(data IntPair (IntPair Int Int))

(defvar conflicting-defs-in-pat
  (match (IntPair 1 2)
    (case (IntPair a a) a)))
